@@ -2097,7 +2097,7 @@ public class TexturePack {
                             else if(av[0].equals("custColorMult")) {
                                 try {
                                     Class<?> cls = Class.forName(av[1]);
-                                    custColorMult = (CustomColorMultiplier)cls.newInstance();
+                                    custColorMult = (CustomColorMultiplier)cls.getDeclaredConstructor().newInstance();
                                 } catch (Exception x) {
                                     Log.severe("Error loading custom color multiplier - " + av[1] + ": " + x.getMessage());
                                 }
@@ -2263,7 +2263,7 @@ public class TexturePack {
                         else if(av[0].equals("custColorMult")) {
                             try {
                                 Class<?> cls = Class.forName(av[1]);
-                                custColorMult = (CustomColorMultiplier)cls.newInstance();
+                                custColorMult = (CustomColorMultiplier)cls.getDeclaredConstructor().newInstance();
                             } catch (Exception x) {
                                 Log.severe("Error loading custom color multiplier - " + av[1] + ": " + x.getMessage());
                             }
@@ -2542,7 +2542,11 @@ public class TexturePack {
         else {
             faceindex = laststep.ordinal();
         }
-        textid = map.faces[faceindex];
+        try {
+        	textid = map.faces[faceindex];
+        } catch (ArrayIndexOutOfBoundsException aioob) {
+        	textid = -1;
+        }
         if (ctm != null) {
             int mod = 0;
             if(textid >= COLORMOD_MULT_INTERNAL) {
